--- a/EHmin/MyBase/test.ipynb
+++ b/EHmin/MyBase/test.ipynb
@@ -287,7 +287,7 @@
     "# Example of how to define transformations using albumentations\n",
     "\n",
     "# Instantiate the dataset with the dataframe and the transform\n",
-    "dataset = CustomDataset(dataframe=df, transform=transform)"
+    "dataset = CustomDataset(dataframe=df)"
    ]
   },
   {
