Update train template complete

--- a/EHmin/MyBase/test.ipynb
+++ b/EHmin/MyBase/test.ipynb
@@ -2,166 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Image_path</th>\n",
-       "      <th>Mask_label</th>\n",
-       "      <th>Gender_label</th>\n",
-       "      <th>Age_label</th>\n",
-       "      <th>Total_label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>../../Data/train/images/004421_male_Asian_30/n...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>../../Data/train/images/004421_male_Asian_30/m...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>../../Data/train/images/004421_male_Asian_30/m...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>../../Data/train/images/004421_male_Asian_30/m...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>../../Data/train/images/004421_male_Asian_30/m...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18895</th>\n",
-       "      <td>../../Data/train/images/000526_female_Asian_59...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18896</th>\n",
-       "      <td>../../Data/train/images/000526_female_Asian_59...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18897</th>\n",
-       "      <td>../../Data/train/images/000526_female_Asian_59...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18898</th>\n",
-       "      <td>../../Data/train/images/000526_female_Asian_59...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18899</th>\n",
-       "      <td>../../Data/train/images/000526_female_Asian_59...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>18900 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              Image_path  Mask_label  \\\n",
-       "0      ../../Data/train/images/004421_male_Asian_30/n...           2   \n",
-       "1      ../../Data/train/images/004421_male_Asian_30/m...           0   \n",
-       "2      ../../Data/train/images/004421_male_Asian_30/m...           0   \n",
-       "3      ../../Data/train/images/004421_male_Asian_30/m...           0   \n",
-       "4      ../../Data/train/images/004421_male_Asian_30/m...           0   \n",
-       "...                                                  ...         ...   \n",
-       "18895  ../../Data/train/images/000526_female_Asian_59...           0   \n",
-       "18896  ../../Data/train/images/000526_female_Asian_59...           0   \n",
-       "18897  ../../Data/train/images/000526_female_Asian_59...           0   \n",
-       "18898  ../../Data/train/images/000526_female_Asian_59...           1   \n",
-       "18899  ../../Data/train/images/000526_female_Asian_59...           0   \n",
-       "\n",
-       "       Gender_label  Age_label  Total_label  \n",
-       "0                 0          1           13  \n",
-       "1                 0          1            1  \n",
-       "2                 0          1            1  \n",
-       "3                 0          1            1  \n",
-       "4                 0          1            1  \n",
-       "...             ...        ...          ...  \n",
-       "18895             1          1            4  \n",
-       "18896             1          1            4  \n",
-       "18897             1          1            4  \n",
-       "18898             1          1           10  \n",
-       "18899             1          1            4  \n",
-       "\n",
-       "[18900 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -216,18 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PIL import Image\n",
     "import torch\n",
@@ -281,12 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "basic_transform = A.Compose([   \n",
-    "            A.Resize(224, 224),\n",
+    "            A.Resize(256, 256),\n",
     "            A.Normalize(),\n",
     "            ToTensorV2()\n",
     "        ])\n",
@@ -301,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,20 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "keyword argument repeated: shuffle (3943537989.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[5], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True, num_workers=0,shuffle=False,pin_memory=True,drop_last=True) #/ Configparser로 만들자!\u001b[0m\n\u001b[0m                                                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword argument repeated: shuffle\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_dataset = CustomDataset(train_df,transform)\n",
+    "train_dataset = CustomDataset(train_df,basic_transform)\n",
     "val_dataset = CustomDataset(val_df,basic_transform)\n",
     "\n",
     "train_loader = DataLoader(train_dataset, batch_size=64, num_workers=0,shuffle=False,pin_memory=True,drop_last=True) #/ Configparser로 만들자!\n",
@@ -376,7 +201,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = CustomModel(18)"
+    "model = CustomModel(18)\n",
+    "model = torch.nn.DataParallel(model)"
    ]
   },
   {
@@ -513,7 +339,7 @@
     "import torch\n",
     "import numpy as np\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
-    "from tqdm import tqdm \n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
     "class Trainer:\n",
     "    def __init__(self, model, optimizer, criterion, train_loader, val_loader, scheduler, device, args):\n",
@@ -631,15 +457,15 @@
     "import torch\n",
     "import numpy as np\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
-    "from tqdm import tqdm \n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "class Trainer:\n",
     "    def __init__(self, model, optimizer, criterion, train_loader, val_loader, scheduler, device):\n",
-    "        self.model = model\n",
     "        self.optimizer = optimizer\n",
     "        self.criterion = criterion\n",
     "        self.scheduler = scheduler\n",
     "        self.device = device\n",
+    "        self.model = model.to(device)\n",
     "        self.save_dir = \"./MyOutput\"\n",
     "        self.logger = SummaryWriter(log_dir=self.save_dir)\n",
     "        self.train_loader = train_loader\n",
@@ -654,8 +480,8 @@
     "            self.model.train()\n",
     "            loss_value = 0\n",
     "            matches = 0\n",
-    "            for idx, train_batch in tqdm(enumerate(self.train_loader)):\n",
-    "                inputs, labels = train_batch\n",
+    "            for idx, train_batch in enumerate(tqdm(self.train_loader)):\n",
+    "                inputs, _, _, _,labels = train_batch\n",
     "                inputs = inputs.to(self.device)\n",
     "                labels = labels.to(self.device)\n",
     "\n",
@@ -673,7 +499,7 @@
     "                if (idx + 1) % 20 == 0:\n",
     "                    train_loss = loss_value / 20\n",
     "                    train_acc = matches / 64 / 20\n",
-    "                    current_lr = self.get_lr(self.optimizer)\n",
+    "                    # current_lr = self.get_lr(self.optimizer)\n",
     "                    self.logger.add_scalar(\n",
     "                        \"Train/loss\", train_loss, epoch * len(self.train_loader) + idx\n",
     "                    )\n",
@@ -684,7 +510,6 @@
     "                    loss_value = 0\n",
     "                    matches = 0\n",
     "\n",
-    "            self.scheduler.step()\n",
     "\n",
     "            # Validation loop\n",
     "            val_loss, val_acc = self.validate()\n",
@@ -694,7 +519,7 @@
     "                print(\n",
     "                    f\"New best model for val accuracy : {val_acc:4.2%}! saving the best model..\"\n",
     "                )\n",
-    "                torch.save(self.model.module.state_dict(), f\"{self.save_dir}/best.pth\")\n",
+    "                torch.save(self.model.state_dict(), f\"{self.save_dir}/best.pth\")\n",
     "                best_val_acc = val_acc\n",
     "            torch.save(self.model.module.state_dict(), f\"{self.save_dir}/last.pth\")\n",
     "            print(\n",
@@ -704,7 +529,8 @@
     "            self.logger.add_scalar(\"Val/loss\", val_loss, epoch)\n",
     "            self.logger.add_scalar(\"Val/accuracy\", val_acc, epoch)\n",
     "            # self.logger.add_figure(\"results\", figure, epoch)  # Uncomment if figure is needed\n",
-    "            print()\n",
+    "            \n",
+    "            self.scheduler.step(val_acc)\n",
     "\n",
     "    def validate(self):\n",
     "        self.model.eval()\n",
@@ -712,8 +538,8 @@
     "        val_acc_items = []\n",
     "\n",
     "        with torch.no_grad():\n",
-    "            for val_batch in self.val_loader:\n",
-    "                inputs, labels = val_batch\n",
+    "            for val_batch in tqdm(self.val_loader):\n",
+    "                inputs, _, _, _, labels = val_batch\n",
     "                inputs = inputs.to(self.device)\n",
     "                labels = labels.to(self.device)\n",
     "\n",
@@ -743,6 +569,13 @@
     "trainer = Trainer(model, optimizer,criterion, train_loader, val_loader, scheduler, device)\n",
     "trainer.train()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
