Fix data_loader Age > 60 -> Age >= 60

--- a/EHmin/MyBase/test.ipynb
+++ b/EHmin/MyBase/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "[18900 rows x 5 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
     "                continue  # If the file name doesn't match any condition, skip it\n",
     "            # Construct the total label\n",
     "            gender_label = 0 if labels[1] == \"male\" else 1\n",
-    "            age_label = 0 if int(labels[3]) < 30 else (2 if int(labels[3]) > 60 else 1)\n",
+    "            age_label = 0 if int(labels[3]) < 30 else (2 if int(labels[3]) >= 60 else 1)\n",
     "            total_label = 6 * mask_label + 3 * gender_label + age_label\n",
     "            # Append the information to the data list\n",
     "            data.append({\n",
@@ -212,6 +212,43 @@
     "df = pd.DataFrame(data)\n",
     "df.to_csv('./dataframe.csv', index=False)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    13500\n",
+      "2     2700\n",
+      "1     2700\n",
+      "Name: Mask_label, dtype: int64\n",
+      "1    11606\n",
+      "0     7294\n",
+      "Name: Gender_label, dtype: int64\n",
+      "0    8967\n",
+      "1    8589\n",
+      "2    1344\n",
+      "Name: Age_label, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mask_label 분포 확인\n",
+    "mask_label_count = df['Mask_label'].value_counts()\n",
+    "print(mask_label_count)\n",
+    "\n",
+    "# Gender_label 분포 확인\n",
+    "gender_label_count = df['Gender_label'].value_counts()\n",
+    "print(gender_label_count)\n",
+    "\n",
+    "# Age_label 분포 확인\n",
+    "age_label_count = df['Age_label'].value_counts()\n",
+    "print(age_label_count)"
    ]
   },
   {
