정글은 언제나 맑은 뒤 흐림

--- a/StringZero/code/v3/infer.ipynb
+++ b/StringZero/code/v3/infer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,7 @@
     "    model.eval()\n",
     "\n",
     "    # 이미지 파일 경로와 정보 파일을 읽어온다.\n",
+    "    print(data_dir)\n",
     "    img_root = os.path.join(data_dir, \"images\")\n",
     "    info_path = os.path.join(data_dir, \"info.csv\")\n",
     "    info = pd.read_csv(info_path)\n",
@@ -78,7 +79,7 @@
     "    preds = []\n",
     "    with torch.no_grad():\n",
     "        for idx, images in enumerate(loader):\n",
-    "            images = images.to(device)\n",
+    "            images = images#.to(device)\n",
     "            pred = model(images)\n",
     "            pred = pred.argmax(dim=-1)\n",
     "            preds.extend(pred.cpu().numpy())\n",
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,18 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_model = make_model(3,'../v3/model/mask_model4/best.pth')\n",
-    "gender_model = make_model(2,'../v3/model/gender_model3/best.pth')\n",
-    "age_model = make_model(3,'../v3/model/age_model2/best.pth')"
+    "mask_model = make_model(3,'../v3/model/mask_model/best.pth')\n",
+    "gender_model = make_model(2,'../v3/model/gender_model2/best.pth')\n",
+    "age_model = make_model(3,'../v3/model/age_model/best.pth')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +139,7 @@
     "    # mask_model = make_model(3,'../v3/model/mask_model4/best.pth')\n",
     "    # gender_model = make_model(3,'../v3/model/age_model3/best.pth')\n",
     "    # age_model = make_model(3,'../v3/model/gender_model3/best.pth')\n",
-    "    data_dir = os.environ.get(\"SM_CHANNEL_EVAL\", \"../../../Data/eval/images/\"),\n",
+    "    data_dir = os.environ.get(\"SM_CHANNEL_EVAL\", \"../../../Data/eval/\"),\n",
     "    output_dir = os.environ.get(\"SM_OUTPUT_DATA_DIR\", \"./output\")\n",
     "    \n",
     "args = Args()"
@@ -146,21 +147,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "expected str, bytes or os.PathLike object, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(output_dir, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# 모델 추론을 수행한다.\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[43minference\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmask_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/torch/autograd/grad_mode.py:27\u001b[0m, in \u001b[0;36m_DecoratorContextManager.__call__.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(func)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecorate_context\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclone():\n\u001b[0;32m---> 27\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[12], line 26\u001b[0m, in \u001b[0;36minference\u001b[0;34m(data_dir, model, output_dir, args)\u001b[0m\n\u001b[1;32m     23\u001b[0m model\u001b[38;5;241m.\u001b[39meval()\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m# 이미지 파일 경로와 정보 파일을 읽어온다.\u001b[39;00m\n\u001b[0;32m---> 26\u001b[0m img_root \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mimages\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     27\u001b[0m info_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(data_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minfo.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     28\u001b[0m info \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(info_path)\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/posixpath.py:76\u001b[0m, in \u001b[0;36mjoin\u001b[0;34m(a, *p)\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mjoin\u001b[39m(a, \u001b[38;5;241m*\u001b[39mp):\n\u001b[1;32m     72\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Join two or more pathname components, inserting '/' as needed.\u001b[39;00m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;124;03m    If any component is an absolute path, all previous path components\u001b[39;00m\n\u001b[1;32m     74\u001b[0m \u001b[38;5;124;03m    will be discarded.  An empty last part will result in a path that\u001b[39;00m\n\u001b[1;32m     75\u001b[0m \u001b[38;5;124;03m    ends with a separator.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 76\u001b[0m     a \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     77\u001b[0m     sep \u001b[38;5;241m=\u001b[39m _get_sep(a)\n\u001b[1;32m     78\u001b[0m     path \u001b[38;5;241m=\u001b[39m a\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected str, bytes or os.PathLike object, not tuple"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../../../Data/eval/\n",
+      "Calculating inference results..\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/torchvision/transforms/transforms.py:332: UserWarning: Argument 'interpolation' of type int is deprecated since 0.13 and will be removed in 0.15. Please use InterpolationMode enum.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inference Done! Inference result saved at ./output/output.csv\n"
      ]
     }
    ],
@@ -169,10 +179,10 @@
     "# model_dir = args.model_dir\n",
     "output_dir = args.output_dir\n",
     "\n",
-    "os.makedirs(output_dir, exist_ok=True)\n",
+    "os.makedirs('./output/', exist_ok=True)\n",
     "\n",
     "# 모델 추론을 수행한다.\n",
-    "inference(data_dir, mask_model, output_dir, args)\n"
+    "inference('../../../Data/eval/', age_model, output_dir, args)\n"
    ]
   },
   {
