--- a/EHmin/MyBase/test.ipynb
+++ b/EHmin/MyBase/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "[18900 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,6 +212,42 @@
     "df = pd.DataFrame(data)\n",
     "df.to_csv('./dataframe.csv', index=False)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4     4085\n",
+      "3     3660\n",
+      "0     2745\n",
+      "1     2050\n",
+      "16     817\n",
+      "10     817\n",
+      "15     732\n",
+      "9      732\n",
+      "12     549\n",
+      "6      549\n",
+      "5      545\n",
+      "2      415\n",
+      "13     410\n",
+      "7      410\n",
+      "17     109\n",
+      "11     109\n",
+      "14      83\n",
+      "8       83\n",
+      "Name: Total_label, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "mask_label_count = df['Total_label'].value_counts()\n",
+    "print(mask_label_count)"
    ]
   },
   {
